# src/FitSync.Gui/swagger.json
@@ -441,7 +441,7 @@
         }
       }
     },
-    "/api/connections": {
+    "/api/Connections": {
       "get": {
         "tags": [
           "Connections"
@@ -480,7 +480,7 @@
         }
       }
     },
-    "/api/connections/{serviceType}": {
+    "/api/Connections/{serviceType}": {
       "delete": {
         "tags": [
           "Connections"
@@ -503,7 +503,7 @@
         }
       }
     },
-    "/api/connections/mappings": {
+    "/api/Connections/mappings": {
       "get": {
         "tags": [
           "Connections"
@@ -572,7 +572,7 @@
         }
       }
     },
-    "/api/connections/status": {
+    "/api/Connections/status": {
       "get": {
         "tags": [
           "Connections"
@@ -959,16 +959,15 @@
       },
       "ActivityStatus": {
         "enum": [
-          0,
-          1,
-          2,
-          3,
-          4,
-          5,
-          6
+          "Pending",
+          "Claimed",
+          "Processing",
+          "Uploaded",
+          "Failed",
+          "Conflict",
+          "ServiceUnavailable"
         ],
-        "type": "integer",
-        "format": "int32"
+        "type": "string"
       },
       "AuthSuccessResponse": {
         "required": [
@@ -1184,9 +1183,20 @@
         },
         "additionalProperties": false
       },
+      "FetcherStatusReason": {
+        "enum": [
+          "None",
+          "FetcherUnhealthy",
+          "NoDestinations",
+          "AllDestinationsUnhealthy",
+          "SomeDestinationsUnhealthy"
+        ],
+        "type": "string"
+      },
       "FetcherStatusResponse": {
         "required": [
           "destinations",
+          "reason",
           "serviceType",
           "status"
         ],
@@ -1197,6 +1207,9 @@
           },
           "status": {
             "type": "string"
+          },
+          "reason": {
+            "$ref": "#/components/schemas/FetcherStatusReason"
           },
           "destinations": {
             "type": "array",
